--- a/trunk/clientv2/index.html
+++ b/trunk/clientv2/index.html
@@ -114,10 +114,10 @@
 					<p class="exchange-denied criteria-content">Upgrade to a StockFacts Premium account to search additional exchanges, including Malaysia, Taiwan, Thailand, USA, China, Hong Kong, Indonesia and the Philippines.</p>
 					<p>
 						<span data-bind="visible:$root.userStatus()=='UNAUTHORIZED'">
-						<a data-bind="siteLink:'sign-in'">Sign in </a> |
-						<a data-bind="siteLink:'sign-up'">Start Your free trial</a>
+						<a class="underline" data-bind="siteLink:'sign-in'">Sign in </a> |
+						<a class="underline" data-bind="siteLink:'sign-up'">Start your free trial</a>
 						</span>
-						<a href="purchase-account.html" data-bind="visible:($root.userStatus()=='TRIAL'|| $root.userStatus()=='EXPIRED')">Purchase</a>
+						<a class="underline" target="_blank" href="purchase-account.html" data-bind="visible:($root.userStatus()=='TRIAL'|| $root.userStatus()=='EXPIRED')">Purchase</a>
 					</p>
 				<!--/ko-->
 
