--- a/trunk/clientv2/email/halfway.html
+++ b/trunk/clientv2/email/halfway.html
@@ -34,7 +34,7 @@
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 23px; color: #0e236b; margin: 0 0 25px 0;">Trial - 7 Days Remaining</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0;"><b>You are halfway through your StockFacts Premium trial account.</b> In order to continue using the Premium features, purchase a Premium account now.</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 10px 0;">A Premium account includes:</div>
-									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 0 0;">- Ability to create and manage watch list</div>
+									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 0 0;">- Ability to create and manage a watch list</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 0 0;">- Access to additional companies and currencies</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 0 0;">- Access to estimates and advanced charting</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0;">- Real time market data (only available with a paid Premium account).</div>
