--- a/trunk/clientv2/email/reset.html
+++ b/trunk/clientv2/email/reset.html
@@ -33,7 +33,7 @@
 									</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 23px; color: #0e236b; margin: 0 0 25px 0;">Reset Your Password</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0; line-height: 125%;">We received your request for login help.  Below is a link to reset your password.  Use this and your email address to log into StockFacts Premium.</div>
-									<div style="text-align: center;"><a th:href="${baseUrl + '/iframe.html?page=17&amp;ref=' + token}"><img th:src="${baseUrl + '/email/_images/reset-password.gif'}" width="164" height="32" alt="Reset my password" /></a></div>
+									<div style="text-align: center;"><a th:href="${emailSite + '?page=17&amp;ref=' + token}"><img th:src="${baseUrl + '/email/_images/reset-password.gif'}" width="164" height="32" alt="Reset my password" /></a></div>
 									<div style="text-align: center;">
 										<img th:src="${baseUrl + '/email/_images/spacer.gif'}" width="1" height="75" alt="" />
 									</div>
