--- a/clientv2/reset-password.html
+++ b/clientv2/reset-password.html
@@ -37,6 +37,7 @@
 			<a class="button" data-bind="click:$root.resetPass, css: {'disabled-btn': (isFormValid() == undefined || errors().length)}">Change Password</a>
 		</div>
 		<footer>
+			<span class="right"><a data-bind="siteLink:'sign-in'">Sign in</a></span>
 		</footer>
 	</section>
 	
