--- a/clientv2/email/alerts.html
+++ b/clientv2/email/alerts.html
@@ -104,7 +104,7 @@
 															<td width="145" align="right">
 																<span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; font-weight: bold; color: #333;" th:text="${company.currency}">SGD</span>
 																<span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; font-weight: bold; color: #333;" th:text="${company.price}">10.06</span>
-																<span th:style="'font-family: Arial, Helvetica, sans-serif; font-size: 14px; font-weight: bold; color:' + ${company.change >= 0 ? '#bdd831' : '#bf0052'}" th:text="${company.change}">+0.02</span>
+																<span th:style="'font-family: Arial, Helvetica, sans-serif; font-size: 14px; font-weight: bold; color:' + ${company.change >= 0 ? '#bdd831' : '#bf0052'}" th:text="${company.change >= 0 ? '+' : ''} + ${company.change}">+0.02</span>
 															</td>
 														</tr>
 													</table>
